--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: bookbuddy
     env: python
     plan: free
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn api:app
     envVars:
       - key: PYTHON_VERSION
