--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-# Core ML & Data Science
-torch==2.7.1
+torch==2.2.1
 pandas==2.2.1
 numpy==1.26.4
-scikit-learn==1.4.1
+scikit-learn==1.4.1.post1
 matplotlib==3.8.3
 tqdm==4.66.2
 
-# Web & API
 Flask
 gunicorn
 flask-cors
