--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch==2.2.1
+torch==2.7.1
 pandas==2.2.1
 numpy==1.26.4
-scikit-learn==1.3.2
+scikit-learn==1.3.2  # ⚠️ was 1.4.1 (incompatible)
 matplotlib==3.8.3
 tqdm==4.66.2
 
